[package]
name = "plc-control"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
eframe = "0.21"
serialport = { git = "https://github.com/reticulis/serialport-rs.git", branch = "strum" }
strum = { version = "0.24.1", features = ["derive"] }
thiserror = "1.0"